# rust-dectalk

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
examples/: speech_to_memory.rs  web_responder.rs
src/: ffi.rs  lib.rs  main.rs
