[package]
name = "dectalk"
version = "0.3.1"
edition = "2024"
build = "build.rs"
license-file = "LICENSE"
description = "Rust bindings for DECTalk text-to-speech"
repository = "https://github.com/ApolloFops/rust-dectalk"
readme = "README.md"
include = [
	"**/*.rs",
	"wrapper.h",
	"dectalk/**/*.h",
	"dectalk/**/*.c",
	"dectalk/**/*.cmakedefine",
	"dectalk/**/*.def",
	"dectalk/**/*.tab",
	"dectalk/**/CMakeLists.txt",
	"dectalk/src/dapi/src/dic/Dic_us.txt",
]

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }

[build-dependencies]
bindgen = "0.71.0"
cmake = "0.1"
dircpy = "0.3.19"

[dev-dependencies]
axum = "0.8.8"
